syntax = "proto3";
package ClassIsland.Shared.Protobuf.Enum;
option csharp_namespace = "ClassIsland.Shared.Protobuf.Enum";

enum Retcode {
    Unspecified = 0; // None = 0;
    Success = 200;
    ServerInternalError = 500;
    InvalidRequest = 404;
    // protocol: Handshake
    HandshakeClientRejected=1001;
    // service: ClientRegister
    Registered = 10001;
    ClientNotFound = 10002;
    // service: ClientCommandDeliver

    // service: Plugin
    PluginNotFound = 20001;
    PluginIncompatible = 20002;
    PluginDisabled = 20003;
    PluginBusy = 20004;
}
