syntax = "proto3";
package ClassIsland.Shared.Protobuf.Server;
option csharp_namespace = "ClassIsland.Shared.Protobuf.Server";

message ServerPluginInfo {
  string Identifier = 1;
  string Version = 2;
  string Name = 3;
  string Description = 4;
}

message PluginListRsp {
  repeated ServerPluginInfo Plugins = 1;
}

message PluginServerToClientRsp {
  string PluginIdentifier = 1;
  string MessageType = 2;
  bytes Payload = 3;
}

message PluginStateChangeNotification {
  string PluginIdentifier = 1;
  bool IsLoading = 2;
  string Version = 3;
}

message PluginDisableRequest {
  string PluginIdentifier = 1;
  string Reason = 2;
}

message PluginEnableRequest {
  string PluginIdentifier = 1;
}
